<resources>
    <string name="app_name">Bikes SOS</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Robadas</string>
    <string name="menu_slideshow">Decomisadas</string>
    <string name="menu_tools">En venta</string>
    <string name="menu_share">Mi información</string>
    <string name="menu_send">Acerca de</string>
</resources>
