<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stolen"
            android:icon="@drawable/ic_menu_stolen"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_confiscated"
            android:icon="@drawable/ic_menu_confiscated"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_on_sale"
            android:icon="@drawable/ic_menu_on_sale"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Extra">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
